--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,15 @@
   {% include head.html %}
 
   <body>
-
     {% include header.html %}
-
-    <div class="page-content">
+    <div class="container">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
 
     {% include footer.html %}
-
+	
   </body>
 
 </html>
