--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,34 +1,20 @@
 <header class="site-header">
-<div class="navbar-fixed">
-  <nav class="teal">
-    <div class="nav-wrapper container">
-      <a href="#" class="brand-logo">Naveen Shaji</a>
-      <ul id="nav-mobile" class="right side-nav">
-        <li><a href="sass.html">Blog</a></li>
-        <li><a href="components.html">Projects</a></li>
-        <li><a href="javascript.html">Social</a></li>
-		<li><a href="javascript.html">GitHub</a></li>
-      </ul>
-	  <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+    <div class="navbar-fixed">
+        <nav class="cyan">
+            <div class="nav-wrapper container">
+                <a href="#" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
+                <ul id="nav-mobile" class="right side-nav">
+                    <li><a href="sass.html">Blog</a>
+                    </li>
+                    <li><a href="components.html">Projects</a>
+                    </li>
+                    <li><a href="javascript.html">Social</a>
+                    </li>
+                    <li><a href="javascript.html">GitHub</a>
+                    </li>
+                </ul>
+                <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+            </div>
+        </nav>
     </div>
-  </nav>
-</div>
-    <div class="teal lighten-3">
-	<!--card-->
-        <div class="container">
-
-		<div class="row">
-		<div class="col s12">
-		<div class="card teal lighten-5 z-depth-3">
-		<div class="card-content">
-          <h3>Hello!</h3>
-		  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat iaculis efficitur. Integer laoreet cursus felis id mollis. Vestibulum eget lectus consectetur, sodales orci sed, tincidunt elit. Proin et purus at tortor tempor gravida. Duis id faucibus est. Vestibulum auctor, lectus non dictum congue, magna turpis ornare purus, quis vestibulum erat leo et dui. Aenean at ante quis magna rutrum commodo. In consectetur ipsum magna, eu vestibulum tellus accumsan sit amet. Cras leo massa, euismod quis orci tempus, egestas rutrum ligula. Praesent ut elementum tellus, volutpat varius neque. Sed ipsum lacus, varius sit amet tellus a, pharetra fermentum purus.
-		 <br><br><a class="waves-effect waves-light btn">See my Work</a>
-		 </div>
-		 </div>
-        </div>
-		</div>
-</div>
-		
-	</div>
 </header>
