Finished up basic layout. Added...
Added a new blog post. Added clamp after 5 lines on cards. Fixed footer.
Made into sticky footer. Added content. Now need to change scrollbars to
something appealing yet light.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,15 @@
     <div class="navbar-fixed">
         <nav class="cyan">
             <div class="nav-wrapper container">
-                <a href="#" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
+                <a href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a href="sass.html">Blog</a>
+                    <li><a href="/" target="_blank">Blog</a>
                     </li>
-                    <li><a href="components.html">Projects</a>
+                    <li><a href="#" target="_blank">Projects</a> 
                     </li>
-                    <li><a href="javascript.html">Social</a>
+                    <li><a href="#" target="_blank">Social</a>
                     </li>
-                    <li><a href="javascript.html">GitHub</a>
+                    <li><a href="http://github.com/naveenshaji/" target="_blank">GitHub</a>
                     </li>
                 </ul>
                 <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
