--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,42 @@
 <footer class="page-footer cyan">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+            
+            <div class="col l3 s6">
+                <h5 class="white-text">social-links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                    <li><a class="grey-text text-lighten-3" href="http://facebook.com/xSF.AzraeL/" target="_blank"><i class="mdi-social-person-add"></i> Facebook</a>
                     </li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                    <li><a class="grey-text text-lighten-3" href="https://plus.google.com/u/0/114363400342894379257/posts" target="_blank"><i class="mdi-social-plus-one"></i> Google+</a>
                     </li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a>
-                    </li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                    <li><a class="grey-text text-lighten-3" href="http://github.com/naveenshaji/" target="_blank"><i class="mdi-notification-adb"></i> GitHub</a>
                     </li>
                     <ul>
             </div>
+                       
+            <div class="col l3 s6">
+            <h5 class="white-text">where-i-live</h5>
+            <p class="grey-text text-lighten-4">TC 11/1827<br>West Cliff Gardens 35<br>Kowdiar, Trivandrum</p>
+            </div>
+            
+            <div class="col l3 s6">
+                <h5 class="white-text">contact-me</h5>
+                <p class="grey-text text-lighten-4">+91-9496-74-7070<br>naveen@pixelblenders.com<br>xsf.azrael@gmail.com</p>
+            </div>
+
+                                               
+            <div class="col l3 s6">
+                <h5 class="white-text">naveenshaji</h5>
+                <p class="grey-text text-lighten-4">Converting caffeine to code since 1997. I love web design. xoxo.</p>
+            </div>
+
+
         </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
             © 2015 Naveen Shaji
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="http://pixelblenders.com/" target="_blank">PixelBlenders</a>
         </div>
     </div>
 </footer>
