Made blog li class active in header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="nav-wrapper container">
                 <a href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a href="/" target="_blank">Blog</a>
+                    <li class="active"><a href="/" target="_blank">Blog</a>
                     </li>
                     <li><a href="#" target="_blank">Projects</a> 
                     </li>
