Removed class active from 'blog' in navbar
because it didn't look that great.

--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,7 @@ footer {
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;  
 }
+.post-title {
+    overflow: hidden;
+    max-height: 1.2em;
+}
