--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             
-            <div class="col l3 s6">
+            <div class="col l3 m6 s12">
                 <h5 class="white-text">social-links</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="http://facebook.com/xSF.AzraeL/" target="_blank"><i class="mdi-social-person-add"></i> Facebook</a>
@@ -14,18 +14,18 @@
                     <ul>
             </div>
                        
-            <div class="col l3 s6">
+            <div class="col l3 m6 s12">
             <h5 class="white-text">where-i-live</h5>
-            <p class="grey-text text-lighten-4">TC 11/1827<br>West Cliff Gardens 35<br>Kowdiar, Trivandrum</p>
+            <p class="grey-text text-lighten-4">TC 11/1827<br>West Cliff Gardens 35<br>Kowdiar, Trivandrum<br>&nbsp;</p>
             </div>
             
-            <div class="col l3 s6">
+            <div class="col l3 m6 s12">
                 <h5 class="white-text">contact-me</h5>
                 <p class="grey-text text-lighten-4">+91-9496-74-7070<br>naveen@pixelblenders.com<br>xsf.azrael@gmail.com</p>
             </div>
 
                                                
-            <div class="col l3 s6">
+            <div class="col l3 m6 s12">
                 <h5 class="white-text">naveenshaji</h5>
                 <p class="grey-text text-lighten-4">Converting caffeine to code since 1997. I love web design. xoxo.</p>
             </div>
