--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 {% include head.html %}
 
-<body>
+<body class="grey lighten-4">
     {% include header.html %}
     <div class="container">
         <div class="wrapper">
