Added handle in config to change colour theme
Lots of other fixes. Added post.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
     <div class="navbar-fixed">
-        <nav class="cyan">
+        <nav class="{{ site.css }} darken-2">
             <div class="nav-wrapper container">
                 <a href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
