--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer cyan">
+<footer class="page-footer {{ site.css }} darken-2">
     <div class="container">
         <div class="row">
             
