Added wave to header title
And removed target blank on would-be internal links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,13 @@
     <div class="navbar-fixed">
         <nav class="{{ site.css }} darken-2">
             <div class="nav-wrapper container">
-                <a href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
+                <a href="/" class="brand-logo waves-effect"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a href="/" target="_blank">Blog</a>
+                    <li><a href="/">Blog</a>
                     </li>
-                    <li><a href="#" target="_blank">Projects</a> 
+                    <li><a href="/">Projects</a> 
                     </li>
-                    <li><a href="#" target="_blank">Social</a>
+                    <li><a href="/">Social</a>
                     </li>
                     <li><a href="http://github.com/naveenshaji/" target="_blank">GitHub</a>
                     </li>
