Made wave effect affect full navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
     <div class="navbar-fixed">
-        <nav class="{{ site.css }} darken-2">
+        <nav class="{{ site.css }} darken-2 waves-effect waves-light">
             <div class="nav-wrapper container">
-                <a href="/" class="brand-logo waves-effect"><i class="mdi-communication-chat"></i> naveenshaji</a>
+                <a href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
                     <li><a href="/">Blog</a>
                     </li>
