--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                     </li>
                     <li><a href="/">Projects</a> 
                     </li>
-                    <li><a href="/">Social</a>
+                    <li><a href="/about/">About</a>
                     </li>
                     <li><a href="http://github.com/naveenshaji/" target="_blank">GitHub</a>
                     </li>
