Changed duration of fade in and out to 400

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,22 +12,9 @@
         {{ content }}
     </article>
     <br/><hr/><br/>
-    <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-cyan waves-light btn" onclick="window.location.href='/'">Share</button>
-    <button class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-cyan waves-light btn" onclick="window.location.href='/'">Back Home</button>
+    <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-cyan waves-light btn" href="/">Share</button>
+    <button class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-cyan waves-light btn" href="/">Back Home</button>
     <br/>&nbsp;
     
-<!--
-    <div class="card {{ site.css }} darken-1 z-depth-1">
-            <div class="card-content white-text">
-              <span class="card-title">{{ page.title }}</span>
-              <p>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p><br/>
-              <x class="clamp-module">{{ content }}</x>
-            </div>
-            <div class="card-action {{ site.css }} darken-2">
-              <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn" onclick="window.location.href='/'">Share</button>
-              <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn" onclick="window.location.href='/'">Back Home</button>
-            </div>
-    </div>
--->
 
 </div>
