Fixed jump bugs. Added nicescroll and velocity
Velocity is used to replace $.animate to fix jump.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <body class="{{ site.css }} lighten-5">
     {% include header.html %}
     <div id="page-wrap">
-        <section id="main-content">
+        <div id="main-content">
             <div id="guts">
                 <div class="container">
                     <div class="wrapper">
@@ -13,7 +13,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
     {% include footer.html %}
 </body>
