--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,13 @@
     <div class="navbar-fixed">
         <nav class="{{ site.css }} darken-2 waves-effect waves-light">
             <div class="nav-wrapper container">
-                <a href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
+                <a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a href="/">Blog</a>
+                    <li><a internal href="/">Blog</a>
                     </li>
-                    <li><a href="/">Projects</a> 
+                    <li><a internal href="/">Projects</a> 
                     </li>
-                    <li><a href="/about/">About</a>
+                    <li><a internal href="/about/">About</a>
                     </li>
                     <li><a href="http://github.com/naveenshaji/" target="_blank">GitHub</a>
                     </li>
