Made cards clickable with wave-effect
Added the js for trantition on div[href] clicks. Also fixed a few
js-linkage issues.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class="site-header">
     <div class="navbar-fixed">
-        <nav class="{{ site.css }} darken-2  waves-effect waves-light">
-            <div class="nav-wrapper container">
+        <nav class="{{ site.css }} darken-2 waves-effect waves-light">
+            <div class="nav-wrapper">
+               <div class="container">
                 <a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
                     <li><a internal href="/">Blog</a>
@@ -14,6 +15,7 @@
                     </li>
                 </ul>
                 <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+            </div>
             </div>
         </nav>
     </div>
