--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script src="js/jquery.nicescroll.min.js"></script>
-    <script src="js/velocity.min.js"></script>
+    <script src="/js/jquery.nicescroll.min.js"></script>
+    <script src="/js/velocity.min.js"></script>
     <script type="text/javascript" src="/js/modernizr.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
