--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,9 @@ body {
     -moz-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }*/
+
+nav {
+     overflow: visible !important;
+    z-index: auto;
+    will-change: contents !important;
+}
