Added scroll to top button and mock posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 
 <body class="{{ site.css }} lighten-5">
     {% include header.html %}
+    <a class="darken-2 scrollToTop btn-floating btn-large waves-effect waves-light {{ site.css }}"><i class="mdi-maps-navigation"></i></a>
     <div id="page-wrap">
         <div id="main-content">
             <div id="guts">
