Added loading screen
not responsive

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,27 @@
 {% include head.html %}
 
 <body class="{{ site.css }} lighten-5">
+ 
+  <div class="preloader cyan container-fluid row">
+    <div class="white-text text-darken-4 xpretext"><h4>naveenshaji</h4>
+       <a class="xprebutton cyan darken-1 waves-effect waves-light btn">Enter</a>
+       <div class=" z-depth-3 container-fluid preshadow">
+       <div class="xprecontainer">
+           <img src="/img/man77.svg" class="man svg" />
+       </div>
+       <div class="xprecontainer2">
+           
+           <h3>Hello</h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi.
+           
+       </div>
+       </div>
+        </div>
+     <div class="progress cyan lighten-2 xpreloading">
+      <div class="indeterminate cyan darken-3"></div>
+  </div>
+  
+</div>
+   
     {% include header.html %}
     <a class="darken-2 scrollToTop btn-floating btn-large waves-effect waves-light {{ site.css }}"><i class="mdi-maps-navigation"></i></a>
     <div id="page-wrap">
