--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
 
 <body class="{{ site.css }} lighten-5">
  
-  <div class="preloader cyan container-fluid row">
+  <div class="preloader {{ site.css }} container-fluid row">
     <div class="white-text text-darken-4 xpretext"><h4>naveenshaji</h4>
-       <a class="xprebutton cyan darken-1 waves-effect waves-light btn">Enter</a>
-       <div class=" z-depth-3 container-fluid preshadow">
+       <!--<a class="xprebutton {{ site.css }} darken-1 waves-effect waves-light btn">Enter</a>
+       <div class=" z-depth-3 container-fluid preshadow {{ site.css }} darken-1">
        <div class="xprecontainer">
            <img src="/img/man77.svg" class="man svg" />
        </div>
@@ -16,10 +16,10 @@
            <h3>Hello</h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi.
            
        </div>
-       </div>
+       </div>-->
         </div>
-     <div class="progress cyan lighten-2 xpreloading">
-      <div class="indeterminate cyan darken-3"></div>
+     <div class="progress {{ site.css }} lighten-2 xpreloading">
+      <div class="indeterminate {{ site.css }} darken-3"></div>
   </div>
   
 </div>
@@ -30,7 +30,7 @@
         <div id="main-content">
             <div id="guts">
                 <div class="container">
-                    <div class="wrapper">
+                    <div class="wrapper {{ site.css }}-text text-darken-3">
                         {{ content }}
                     </div>
                 </div>
