--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script src="/js/jquery.nicescroll.min.js"></script>
     <script src="/js/velocity.min.js"></script>
+    <script src="/js/skrollr.min.js"></script>
     <script type="text/javascript" src="/js/modernizr.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
