--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                <div class="container">
                 <a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a internal href="/">Blog</a>
+                    <li><a internal href="/blog/">Blog</a>
                     </li>
                     <li><a internal href="/">Projects</a> 
                     </li>
