--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 </div>
    
     {% include header.html %}
-    <a class="darken-2 scrollToTop btn-floating btn-large waves-effect waves-light {{ site.css }}"><i class="mdi-maps-navigation"></i></a>
+    <a class="darken-2 scrollToTop btn-floating btn-large waves-effect waves-light {{ site.css }}"><i class="mdi-action-home"></i></a>
     <div id="page-wrap">
         <div id="main-content">
             <div id="guts">
