--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
     <script src="/js/jquery.nicescroll.min.js"></script>
     <script src="/js/velocity.min.js"></script>
     <script src="/js/skrollr.min.js"></script>
+    <script src="/js/jquery.scrolline.js"></script>
     <script type="text/javascript" src="/js/modernizr.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
