--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ body {
     overflow: hidden;
     max-height: 1.2em;
 }
-
 /*.card:hover {
     -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -22,20 +21,20 @@ body {
 }*/
 
 nav {
-     overflow: visible !important;
+    overflow: visible !important;
     z-index: auto;
     will-change: contents !important;
 }
 
-.scrollToTop{
-	position:fixed;
-	top:100px;
-	right:40px;
-	display:none;
+.scrollToTop {
+    position: fixed;
+    top: 100px;
+    right: 40px;
+    display: none;
 }
 
 .preloader {
-     position: fixed;
+    position: fixed;
     height: 100%;
     width: 100%;
     top: 0;
@@ -45,90 +44,149 @@ nav {
 }
 
 .xpreloading {
-        width: 800px;
+    width: 800px;
     height: 5px;
     position: absolute;
-    top:0;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-
     margin: auto;
 }
+
 .xpretext {
     width: 800px;
     height: 5px;
     position: absolute;
-    top:0;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
     padding-top: 10px;
 }
+
 .xprebutton {
     margin-left: 650px;
     margin-top: -300px;
 }
+
 .xprecontainer {
-    margin-top: -360px;   
+    margin-top: -360px;
 }
+
 .xprecontainer2 {
     margin-top: -220px;
     margin-left: 220px;
 }
+
 .man {
     width: 200px;
 }
+
 .preshadow {
-    padding-bottom: 40px;   
+    padding-bottom: 40px;
 }
+
 .scroll-1 {
     position: fixed;
-  left: 50%;
-  top: 0%;
+    left: 50%;
+    top: 0%;
 }
 
 .scroll-1 .card-content {
-     overflow-y: auto;
-    height: 390px;
+    overflow-y: auto;
+    max-height: 200px;
 }
-
 /* Large desktop */
-@media (min-width: 1200px) { 
+
+@media (min-width: 1600px) {
     .scroll-1 {
-          width: 1000px;
-          margin-left: -500px;
+        width: 1200px;
+        margin-left: -600px;
     }
 }
 
-@media (max-width: 1200px) { 
+@media (max-width: 1600px) {
     .scroll-1 {
-          width: 900px;
-          margin-left: -450px;
+        width: 1000px;
+        margin-left: -500px;
     }
 }
- 
+
+@media (max-width: 1200px) {
+    .scroll-1 {
+        width: 900px;
+        margin-left: -450px;
+    }
+}
 /* Portrait tablet to landscape and desktop */
+
 @media (min-width: 768px) and (max-width: 979px) {
     .scroll-1 {
-          width: 700px;
-          margin-left: -350px;
+        width: 700px;
+        margin-left: -350px;
     }
 }
- 
 /* Landscape phone to portrait tablet */
+
 @media (max-width: 767px) {
     .scroll-1 {
-          width: 500px;
-          margin-left: -250px;
+        width: 500px;
+        margin-left: -250px;
     }
 }
- 
 /* Landscape phones and down */
+
 @media (max-width: 480px) {
     .scroll-1 {
-          width: 450px;
-          margin-left: -225px;
+        width: 450px;
+        margin-left: -225px;
+    }
+}
+
+
+/*HEIGHT*/
+
+@media (min-height: 1600px) {
+    .scroll-1 .card-content {
+        max-height: 900px;
+    }
+}
+
+@media (max-height: 1600px) {
+    .scroll-1 .card-content {
+        max-height: 800px;
+    }
+}
+
+@media (max-height: 1200px) {
+    .scroll-1 .card-content {
+        max-height: 700px;
+    }
+}
+/* Portrait tablet to landscape and desktop */
+
+@media (min-height: 768px) and (max-height: 979px) {
+    .scroll-1 .card-content {
+        max-height: 500px;
+    }
+}
+/* Landscape phone to portrait tablet */
+@media (max-height: 667px) {
+    .scroll-1 .card-content {
+        max-height: 380px;
+    }
+}
+@media (max-height: 567px) {
+    .scroll-1 .card-content {
+        max-height: 280px;
+    }
+}
+/* Landscape phones and down */
+
+@media (max-height: 480px) {
+    .scroll-1 .card-content {
+        max-height: 220px;
     }
 }
