Added images to cards
And other fixes including progress into a fully fledged blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
     </article>
     <br/><hr/><br/>
     <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-cyan waves-light btn" href="/">Share</button>
-    <button class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-cyan waves-light btn" href="/">Back Home</button>
+    <button class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-cyan waves-light btn" href="/blog/">Back Home</button>
     <br/>&nbsp;
     
 
