--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,10 @@ body {
 }
 
 .clamp-module {
+    height: 120px;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 7;
     -webkit-box-orient: vertical;
 }
 
@@ -95,11 +96,28 @@ nav {
 }
 
 .scroll-1 .card-content {
-    overflow-y: auto;
-    max-height: 200px;
+    overflow: hidden;
+    min-height: 200px;
 }
 
+.scroll-1 .card .cover {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url("/img/1.jpg");
+    transition: 0.3s all ease;
+    overflow: hidden;
+}
 
+.scroll-1 .card .cover:hover {
+    transform: scale(1.04);
+}
+
+.scroll-1 .card .cover .filter {
+    width: 100%;
+    height: 120%;
+    opacity: 0.4;
+}
 
 @media (min-width: 1600px) {
     .scroll-1 {
@@ -142,49 +160,70 @@ nav {
         margin-left: -225px;
     }
 }
-
-
 /*HEIGHT*/
 
 @media (min-height: 1600px) {
     .scroll-1 .card-content {
-        max-height: 900px;
+        height: 300px;
+    }
+    .scroll-1 .card .cover {
+        height: 600px;
     }
 }
 
 @media (max-height: 1600px) {
     .scroll-1 .card-content {
-        max-height: 800px;
+        height: 300px;
+    }
+    .scroll-1 .card .cover {
+        height: 500px;
     }
 }
 
 @media (max-height: 1200px) {
     .scroll-1 .card-content {
-        max-height: 700px;
+        height: 300px;
+    }
+    .scroll-1 .card .cover {
+        height: 400px;
     }
 }
 /* Portrait tablet to landscape and desktop */
 
-@media (min-height: 768px) and (max-height: 979px) {
+@media (max-height: 979px) {
     .scroll-1 .card-content {
-        max-height: 500px;
+        height: 160px;
+    }
+    .scroll-1 .card .cover {
+        height: 250px;
     }
 }
 /* Landscape phone to portrait tablet */
+
 @media (max-height: 667px) {
     .scroll-1 .card-content {
-        max-height: 380px;
+        height: 150px;
+    }
+    .scroll-1 .card .cover {
+        height: 230px;
     }
 }
+
 @media (max-height: 567px) {
     .scroll-1 .card-content {
-        max-height: 280px;
+        height: 120px;
+    }
+    .scroll-1 .card .cover {
+        height: 160px;
     }
 }
 /* Landscape phones and down */
 
 @media (max-height: 480px) {
     .scroll-1 .card-content {
-        max-height: 220px;
+        height: 100px;
+    }
+    .scroll-1 .card .cover {
+        height: 120px;
     }
 }
