--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    text-align: justify;
 }
 
 .clamp-module {
@@ -85,6 +86,18 @@ nav {
     width: 200px;
 }
 
+.mast {
+     margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 25%;
+}
+.mast h1{
+    font-size: 100px;
+}
+.mast h6{
+    font-size: 18px;
+}
 .preshadow {
     padding-bottom: 40px;
 }
@@ -97,32 +110,53 @@ nav {
 
 .scroll-1 .card-content {
     overflow: hidden;
-    min-height: 200px;
 }
 
-.scroll-1 .card .cover {
+.advantage {
+    padding: 20px;
+    width: 100%;
+    min-height: 100px;
+}
+
+.card .cover {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("/img/1.jpg");
+    /*background-image: url("/img/1.jpg");*/
     transition: 0.3s all ease;
     overflow: hidden;
 }
 
-.scroll-1 .card .cover:hover {
+.card .cover .cover-text{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 150px;
+    overflow: hidden;
+    text-overflow: clip; /*add max-width */
+    max-width: 100%;
+    
+}
+
+.card .cover:hover {
     transform: scale(1.04);
 }
 
-.scroll-1 .card .cover .filter {
+.card .cover .filter {
     width: 100%;
     height: 120%;
     opacity: 0.4;
 }
 
+
+
 @media (min-width: 1600px) {
     .scroll-1 {
         width: 1200px;
         margin-left: -600px;
+    }
+    .scroll-1 .card .cover {
+        width: 1200px;
     }
 }
 
@@ -131,12 +165,18 @@ nav {
         width: 1000px;
         margin-left: -500px;
     }
+    .scroll-1 .card .cover {
+        width: 1000px;
+    }
 }
 
 @media (max-width: 1200px) {
     .scroll-1 {
         width: 900px;
         margin-left: -450px;
+    }
+    .scroll-1 .card .cover {
+        width: 900px;
     }
 }
 
@@ -145,6 +185,9 @@ nav {
         width: 700px;
         margin-left: -350px;
     }
+    .scroll-1 .card .cover {
+        width: 700px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -152,12 +195,18 @@ nav {
         width: 500px;
         margin-left: -250px;
     }
+    .scroll-1 .card .cover {
+        width: 500px;
+    }
 }
 
 @media (max-width: 480px) {
     .scroll-1 {
         width: 450px;
         margin-left: -225px;
+    }
+    .scroll-1 .card .cover {
+        width: 450px;
     }
 }
 /*HEIGHT*/
@@ -192,7 +241,7 @@ nav {
 
 @media (max-height: 979px) {
     .scroll-1 .card-content {
-        height: 160px;
+        height: 200px;
     }
     .scroll-1 .card .cover {
         height: 250px;
@@ -202,10 +251,10 @@ nav {
 
 @media (max-height: 667px) {
     .scroll-1 .card-content {
-        height: 150px;
+        height: 140px;
     }
     .scroll-1 .card .cover {
-        height: 230px;
+        height: 190px;
     }
 }
 
@@ -214,7 +263,7 @@ nav {
         height: 120px;
     }
     .scroll-1 .card .cover {
-        height: 160px;
+        height: 140px;
     }
 }
 /* Landscape phones and down */
@@ -224,6 +273,6 @@ nav {
         height: 100px;
     }
     .scroll-1 .card .cover {
-        height: 120px;
+        height: 100px;
     }
 }
