Added mobile skrollr support

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
                <div class="container">
                 <a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> naveenshaji</a>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a internal href="/blog/">Blog</a>
+                    <li><a internal href="/">Docs</a> 
                     </li>
-                    <li><a internal href="/">Projects</a> 
+                    <li><a internal href="/blog/">Blog</a>
                     </li>
                     <li><a internal href="/about/">About</a>
                     </li>
