--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,7 @@
             <div class="col l3 m6 s12">
                 <h5 class="white-text">social-links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="http://facebook.com/xSF.AzraeL/" target="_blank"><i class="mdi-social-person-add"></i> Facebook</a>
-                    </li>
-                    <li><a class="grey-text text-lighten-3" href="https://plus.google.com/u/0/114363400342894379257/posts" target="_blank"><i class="mdi-social-plus-one"></i> Google+</a>
+                    <li><a class="grey-text text-lighten-3" href="http://facebook.com/jorg.hokamp/" target="_blank"><i class="mdi-social-person-add"></i> Facebook</a>
                     </li>
                     <li><a class="grey-text text-lighten-3" href="http://github.com/naveenshaji/" target="_blank"><i class="mdi-notification-adb"></i> GitHub</a>
                     </li>
@@ -16,18 +14,18 @@
                        
             <div class="col l3 m6 s12">
             <h5 class="white-text">where-i-live</h5>
-            <p class="grey-text text-lighten-4">TC 11/1827<br>West Cliff Gardens 35<br>Kowdiar, Trivandrum<br>&nbsp;</p>
+            <p class="grey-text text-lighten-4">Bad Oeynhausen<br>Germany<br>&nbsp;</p>
             </div>
             
             <div class="col l3 m6 s12">
                 <h5 class="white-text">contact-me</h5>
-                <p class="grey-text text-lighten-4">+91-9496-74-7070<br>naveen@pixelblenders.com<br>xsf.azrael@gmail.com</p>
+                <p class="grey-text text-lighten-4">+49 151 161 182 02<br>info@joerghokamp.de</p>
             </div>
 
                                                
             <div class="col l3 m6 s12">
-                <h5 class="white-text">naveenshaji</h5>
-                <p class="grey-text text-lighten-4">Converting caffeine to code since 1997. I love web design. xoxo.</p>
+                <h5 class="white-text">joerghokamp</h5>
+                <p class="grey-text text-lighten-4"></p>
             </div>
 
 
