--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <nav class="{{ site.css }} darken-2 waves-effect waves-light">
             <div class="nav-wrapper">
                <div class="container">
-                <span style="font-family: rafalebg, Arial"><a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> Jörg Hokamp</a></span>
+                <span style="font-family: rafalebg, Arial"><a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> H<i>o</i>kamp IT</a></span>
                 <ul id="nav-mobile" class="right side-nav">
                     <li><a internal href="/">Docs</a> 
                     </li>
