--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,15 +3,9 @@
         <nav class="{{ site.css }} darken-2 waves-effect waves-light">
             <div class="nav-wrapper">
                <div class="container">
-                <span style="font-family: rafalebg, Arial"><a internal href="/" class="brand-logo"><i class="mdi-communication-chat"></i> Hokamp IT-Consulting</a></span>
+                <span style="font-family: rafalebg, Arial"><a internal href="/" class="brand-logo"> Hokamp IT-Consulting</a></span>
                 <ul id="nav-mobile" class="right side-nav">
-                    <li><a internal href="/">Docs</a> 
-                    </li>
-                    <li><a internal href="/blog/">Blog</a>
-                    </li>
-                    <li><a internal href="/about/">About</a>
-                    </li>
-                    <li><a href="http://github.com/jhokamp/" target="_blank">GitHub</a>
+                    <li><a internal href="/about/">Impressum</a>
                     </li>
                 </ul>
                 <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
