--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,28 +3,18 @@
         <div class="row">
             
             <div class="col l3 m6 s12">
-                <h5 class="white-text">social-links</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="http://facebook.com/jorg.hokamp/" target="_blank"><i class="mdi-social-person-add"></i> Facebook</a>
-                    </li>
-                    <li><a class="grey-text text-lighten-3" href="http://github.com/naveenshaji/" target="_blank"><i class="mdi-notification-adb"></i> GitHub</a>
-                    </li>
-                </ul>
-            </div>
-                       
-            <div class="col l3 m6 s12">
-            <h5 class="white-text">where-i-live</h5>
-            <p class="grey-text text-lighten-4">Bad Oeynhausen<br>Germany<br>&nbsp;</p>
+            <h5 class="white-text">Hokamp IT-Consulting</h5>
+            <p class="grey-text text-lighten-4">Jörg Hokamp<br>Eidinghausener Str. 26<br>32549 Bad Oeynhausen</p>
             </div>
             
             <div class="col l3 m6 s12">
-                <h5 class="white-text">contact-me</h5>
-                <p class="grey-text text-lighten-4">+49 151 161 182 02<br>info@joerghokamp.de</p>
+                <h5 class="white-text">Kontakt</h5>
+                <p class="grey-text text-lighten-4">Fon 05731 / 60 69 0-0<br>Fax 05731 / 60 69 0-29<br>info@hokamp-it.de</p>
             </div>
 
                                                
             <div class="col l3 m6 s12">
-                <h5 class="white-text">joerghokamp</h5>
+                <h5 class="white-text"></h5>
                 <p class="grey-text text-lighten-4"></p>
             </div>
 
