--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <nav class="{{ site.css }} darken-2 waves-effect waves-light">
             <div class="nav-wrapper">
                <div class="container">
-                <span style="font-family: rafalebg, Arial"><a internal href="/" class="brand-logo"> Hokamp IT-Consulting</a></span>
+                <span style="font-family: rafalebg, Arial; font-color: 20,116,20;"><a internal href="/" class="brand-logo"> Hokamp IT-Consulting</a></span>
                 <ul id="nav-mobile" class="right side-nav">
                     <li><a internal href="/about/">Impressum</a>
                     </li>
